--- a/react-quill-demo/package.json
+++ b/react-quill-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slate-editor-demo",
+  "name": "react-quill-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^2.0.0-beta.4",
     "react-scripts": "4.0.3",
-    "slate-editor": "^5.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
