--- a/streams/client/package.json
+++ b/streams/client/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-form": "^8.3.7",
+    "redux-thunk": "^2.4.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.0.1"
